fix: corrigir caminhos do index para carregar CSS no GitHub Pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CEEP Newton Sucupira - Página Inicial</title>
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -15,15 +15,15 @@
 <body>
   <header>
     <nav class="container">
-      <a href="../index.html" class="logo">
+      <a href="./index.html" class="logo">
         <img src="/img/logoNewtonSuc.png" alt="Logo CEEP Newton Sucupira" />
       </a>
       <ul class="nav-links">
-        <li><a href="../index.html" class="active">Home</a></li>
-        <li><a href="../view/atualizacoes.html">Atualizações</a></li>
-        <li><a href="../view/arrecadacoes.html">Ações</a></li>
-        <li><a href="../view/informacoes.html">Informações</a></li>
-        <li><a href="../view/vendas.html" class="btn">Login do Terceirão</a></li>
+        <li><a href="./index.html" class="active">Home</a></li>
+        <li><a href="./view/atualizacoes.html">Atualizações</a></li>
+        <li><a href="./view/arrecadacoes.html">Ações</a></li>
+        <li><a href="./view/informacoes.html">Informações</a></li>
+        <li><a href="./view/vendas.html" class="btn">Login do Terceirão</a></li>
       </ul>
       <div class="menu-icon" onclick="toggleMenu()">
         <i class="fa-solid fa-bars"></i>
@@ -35,7 +35,7 @@
     <section class="banner">
       <h1>Página Inicial</h1>
       <p>Descubra todas as informações precisas sobre sua formatura do Terceirão</p>
-      <a href="../view/informacoes.html" class="btn">Saber informações</a>
+      <a href="./view/informacoes.html" class="btn">Saber informações</a>
     </section>
 
     <section class="sobre-site flex-row">
@@ -47,7 +47,7 @@
           atualizações da comissão, metas de arrecadação e muito mais.
           Vamos fazer dessa formatura um momento inesquecível!
         </p>
-        <a href="/view/informacoes.html" class="btn">Saiba mais</a>
+        <a href="./view/informacoes.html" class="btn">Saiba mais</a>
       </div>
       <div class="sobre-img">
         <img src="img/formatura.jpg" alt="Imagem da formatura" />
@@ -69,7 +69,7 @@
           <li><strong>Ciclano</strong> - Tesoureiro</li>
           <li><strong>Beltrano</strong> - Logística</li>
         </ul>
-        <a href="../view/arrecadacoes.html" class="btn">Nossos eventos</a>
+        <a href="./view/arrecadacoes.html" class="btn">Nossos eventos</a>
       </div>
     </section>
 
@@ -101,7 +101,7 @@
             <p>A comissão vai reavaliar os gastos e adaptar o evento mantendo a qualidade.</p>
           </li>
         </ol>
-        <a href="../view/vendas.html" class="btn">Loja de vendas</a>
+        <a href="./view/vendas.html" class="btn">Loja de vendas</a>
       </div>
       <div class="faq-img">
         <img src="img/faq.jpg" alt="Perguntas frequentes" />
@@ -120,6 +120,6 @@
       <p>Desenvolvido por Ariel Ramos</p>
     </div>
   </footer>
-<script src="js/script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
