Versão inicial do site da formatura com variáveis CSS e limpeza de código

--- a/index.html
+++ b/index.html
@@ -5,61 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CEEP Newton Sucupira - Início</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/index.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous" />
 </head>
 <body>
   <header>
     <nav class="container">
-      <a href="index.html" class="logo">
-        <img src="img/logoNewtonSuc.png" alt="Logo CEEP Newton Sucupira" />
+      <a href="/index.html" class="logo">
+        <img src="/img/logoNewtonSuc.png" alt="Logo CEEP Newton Sucupira" />
       </a>
       <ul class="nav-links">
-        <li><a href="index.html">Principal</a></li>
-        <li><a href="../atualizacoes.html">Atualizações</a></li>
-        <li><a href="../arrecadacoes.html">Ações</a></li>
-        <li><a href="../informacoes.html">Informações</a></li>
-        <li><a href="../vendas.html" class="butao active">Login do Terceirão</a></li>
+        <li><a href="/index.html">Principal</a></li>
+        <li><a href="/view/atualizacoes.html">Atualizações</a></li>
+        <li><a href="/view/arrecadacoes.html">Ações</a></li>
+        <li><a href="/view/informacoes.html">Informações</a></li>
+        <li><a href="/view/vendas.html" class="butao active">Login do Terceirão</a></li>
       </ul>
-     <div class="dark-mode-toggle">
-  <input type="checkbox" id="darkModeToggle" />
-  <label for="darkModeToggle" class="switch" title="Alternar modo escuro">
-    <span class="slider round"></span>
-  </label>
-</div>
-
+      <div class="dark-mode-toggle">
+        <input type="checkbox" id="darkModeToggle" />
+        <label for="darkModeToggle" class="switch" title="Alternar modo escuro">
+          <span class="slider round"></span>
+        </label>
+      </div>
     </nav>
   </header>
+  <section class="hero-bg">
+  <div class="hero-content">
+    <h1>Bem-vindo à Formatura do Terceirão</h1>
+    <p>Prepare-se para o grande dia com todas as informações, atualizações e eventos!</p>
+  </div>
+</section>
 
-  <main class="container main-content">
-    <section class="intro">
-      <h1>Bem-vindo à Formatura do Terceirão</h1>
-      <p>Prepare-se para o grande dia com todas as informações, atualizações e eventos!</p>
-      <br>
-      <a href="view/informacoes.html" class="butao">Saiba mais</a>
-    </section>
+<main class="container main-content">
+  <section class="intro">
+    <a href="view/informacoes.html" class="butao">Saiba mais</a>
+  </section>
 
-    <section class="comissao-section">
-      <div class="comissao-text">
-        <h2>Comissão da Formatura</h2>
-        <p>Grupo de alunos responsáveis por toda a organização do evento.</p>
-        <ul>
-          <li><strong>Fulano</strong> – Presidente</li>
-          <li><strong>Ciclano</strong> – Tesoureiro</li>
-          <li><strong>Beltrano</strong> – Logística</li>
-        </ul>
-      </div>
-      <div class="comissao-img">
-        <img src="./img/formados.png" alt="Foto da comissão" />
-      </div>
-    </section>
+  <section class="comissao-section">
+    <div class="comissao-text">
+      <h2>Comissão da Formatura</h2>
+      <p>Grupo de alunos responsáveis por toda a organização do evento.</p>
+      <ul>
+        <li><strong>Fulano</strong> – Presidente</li>
+        <li><strong>Ciclano</strong> – Tesoureiro</li>
+        <li><strong>Beltrano</strong> – Logística</li>
+      </ul>
+    </div>
+  </section>
 
-    <section class="patrocinadores-section">
-      <hr>
-      <p>Agradecemos aos apoiadores!</p>
-    </section>
-  </main>
-
+  <section class="patrocinadores-section">
+    <hr>
+    <p>Agradecemos aos apoiadores!</p>
+  </section>
+</main>
   <footer>
     <div class="container footer-content">
       <div class="footer-links">
