--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="/view/informacoes.html">Informações</a></li>
         <li><a href="/view/vendas.html" class="butao active">Login do Terceirão</a></li>
       </ul>
-      <div class="dark-mode-toggle">
+      <div class="dark-mode-toggle"><i class="fa-solid fa-moon"></i>
         <input type="checkbox" id="darkModeToggle" />
         <label for="darkModeToggle" class="switch" title="Alternar modo escuro">
           <span class="slider round"></span>
@@ -58,16 +58,28 @@
   </section>
 </main>
   <footer>
-    <div class="container footer-content">
-      <div class="footer-links">
-        <a href="view/quemsomos.html">Quem Somos</a>
-        <a href="view/politica.html">Política de Privacidade</a>
-        <a href="view/termos.html">Termos de Uso</a>
-      </div>
-      <p>&copy; 2025 CEEP Newton Sucupira — Todos os direitos reservados.</p>
+  <div class="container footer-content">
+    <div class="footer-links">
+      <a href="view/quemsomos.html">Quem Somos</a>
+      <a href="view/politica.html">Política de Privacidade</a>
+      <a href="view/termos.html">Termos de Uso</a>
     </div>
-  </footer>
+    <div class="social-links">
+      <a href="#" target="_blank" aria-label="Instagram">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a href="#" target="_blank" aria-label="Facebook">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="#" target="_blank" aria-label="WhatsApp">
+        <i class="fa-brands fa-whatsapp"></i>
+      </a>
+    </div>
+    <p>&copy; 2025 CEEP Newton Sucupira — Todos os direitos reservados.</p>
+  </div>
+</footer>
 
-  <script src="js/script.js"></script>
+
+  <script src="/js/script.js"></script>
 </body>
 </html>
